# jellyplayer

./: .env.example  .gitignore  README.md  cache.py  config.py  configs.py  constants.py  encryption.py  jellyplayer.py  main.py  mpv.py  pyproject.toml  ui.py
.github/workflows/: aur.yml
aur/: PKGBUILD
mpv_config/: input.conf  mpv.conf
mpv_config/scripts/: osc.lua  thumbfast.lua
playfin/: cache.py  config.py  main.py  mpv.py  ui.py
